--- a/css/cover.css
+++ b/css/cover.css
@@ -169,7 +169,7 @@ body {
     height: 30%;
     position: relative;
     z-index: 0;
-    margin-bottom: 40px;
+    margin-bottom: 20px;
     border-radius: 25px;
 }
 
@@ -199,7 +199,7 @@ body {
     height: 100%;
     padding: 5px;
     padding-bottom: 10px;
-    border-bottom: 1px solid white;
+    /*border-bottom: 1px solid white;*/
     font-size: 15px;
 }
 
