--- a/css/cover.css
+++ b/css/cover.css
@@ -1,4 +1,3 @@
-
 /* Links */
 a,
 a:focus,
@@ -24,14 +23,13 @@ ul {
     list-style: none;
 }
 
-
 html,
 body {
     -webkit-perspective: 1000px;
     background: #457fca; /* fallback for old browsers */
     background: -webkit-linear-gradient(to right, #5691c8, #457fca); /* Chrome 10-25, Safari 5.1-6 */
     background: linear-gradient(to right, #5691c8, #457fca); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-
+    background-image: url('bg.jpg');
     background-size: cover;
     padding: 0;
     height: 100%;
@@ -75,11 +73,13 @@ body {
 .masthead-brand {
     margin-top: 10px;
     margin-bottom: 10px;
+    z-index: 100;
 
 }
 
 .masthead-nav > li {
     display: inline-block;
+    z-index: 100;
 }
 
 .masthead-nav > li + li {
@@ -95,7 +95,7 @@ body {
     color: #fff; /* IE8 proofing */
     color: rgba(255, 255, 255, .75);
     border-bottom: 2px solid transparent;
-    z-index: 0;
+    z-index: 100;
 }
 
 .masthead-nav > li > a:hover,
@@ -103,6 +103,7 @@ body {
     background-color: transparent;
     border-bottom-color: #a9a9a9;
     border-bottom-color: rgba(255, 255, 255, .25);
+
 }
 
 .masthead-nav > .active > a,
@@ -121,7 +122,6 @@ body {
         float: none;
     }
 }
-
 
 .embed-container {
     position: relative;
@@ -152,7 +152,7 @@ body {
 .avatar .me {
     width: 150px;
     height: 13%;
-    padding: 5px;
+    padding: 3px;
     border: 1px solid white;
     border-radius: 30px;
     position: relative;
@@ -556,31 +556,49 @@ body {
     }
 }
 
+.projects-wrapper {
+    margin-top: 5%;
+    width: 80%;
+    margin-left: 10%;
+    margin-right: 10%;
+}
 
-@keyframes bounceInDown {
-    from, 60%, 75%, 90%, to {
-        animation-timing-function: cubic-bezier(0.215, 0.610, 0.355, 1.000);
-    }
+.project-body {
+    height: auto;
+    width: 40%;
+    display: inline-block;
+    background: #2F3336;
+    margin: 50px;
+    border-radius: 25px;
+    border: 1px solid white;
 
-    0% {
-        opacity: 0;
-        transform: translate3d(0, -3000px, 0);
-    }
+}
 
-    60% {
-        opacity: 1;
-        transform: translate3d(0, 25px, 0);
-    }
+.project-inner {
+    margin: 15px;
+}
 
-    75% {
-        transform: translate3d(0, -10px, 0);
-    }
+.project-title {
+    font-size: 20px;
+}
 
-    90% {
-        transform: translate3d(0, 5px, 0);
-    }
 
-    to {
-        transform: none;
-    }
+.project-description {
+    margin-top: 20px;
+    font-size: 15px;
+    text-align: left;
+
+}
+
+.project-description p {
+    letter-spacing: normal;
+    text-align: left;
+    width: 100%;
+    height: 100%;
+    padding: 5px;
+    padding-bottom: 10px;
+    /*border-bottom: 1px solid white;*/
+    font-size: 15px;
+}
+.project-use {
 }
