--- a/css/cover.css
+++ b/css/cover.css
@@ -794,3 +794,30 @@ h2.f4.text-normal.mb-3 {
 .float-left.text-gray {
     float: left;
 }
+
+
+footer {
+    background: none;
+}
+.coinmarketcap-currency-widget{
+    /*position: fixed;*/
+    width: 300px;
+    height: 180px;
+    float: left;
+    background: #2F3336;
+    border-radius: 10px;
+    color: white;
+    text-align: left;
+    margin: 20px;
+    margin-top: 0;
+    border-style: none;
+
+}
+
+#crypto1 {
+    margin-left: 400px;
+}
+
+#crypto2 {
+    margin-right: 400px;
+}
