--- a/css/cover.css
+++ b/css/cover.css
@@ -62,7 +62,7 @@ body {
 
 /* Padding for spacing */
 .inner {
-    padding: 30px;
+    padding: 30px 42px;
     z-index: 100;
 }
 
@@ -76,14 +76,16 @@ body {
 
 }
 
+.masthead-nav {
+    z-index: 6;
+}
+
 .masthead-nav > li {
     display: inline-block;
-    z-index: 100;
 }
 
 .masthead-nav > li + li {
     margin-left: 20px;
-    z-index: 100;
 }
 
 .masthead-nav > li > a {
@@ -94,7 +96,6 @@ body {
     color: #fff; /* IE8 proofing */
     color: rgba(255, 255, 255, .75);
     border-bottom: 2px solid transparent;
-    z-index: 100;
 }
 
 .masthead-nav > li > a:hover,
@@ -189,8 +190,8 @@ body {
 }
 
 .main {
-    z-index: 0;
-    padding-top: 100px;
+    padding-top: 150px;
+    padding-bottom: 75px;
 }
 
 .inner-container .text {
@@ -295,6 +296,20 @@ body {
     width: 65%;
     -moz-animation: cplus 2s ease-out;
     -webkit-animation: cplus 2s ease-out;
+    background-color: #66b3cc;
+    background-image: -webkit-gradient(linear, left top, left bottom, from(#66b3cc), to(#5da3ba));
+    background-image: -webkit-linear-gradient(top, #66b3cc, #5da3ba);
+    background-image: -moz-linear-gradient(top, #66b3cc, #5da3ba);
+    background-image: -ms-linear-gradient(top, #66b3cc, #5da3ba);
+    background-image: -o-linear-gradient(top, #66b3cc, #5da3ba);
+    background-image: linear-gradient(top, #66b3cc, #5da3ba)
+
+}
+
+.c {
+    width: 65%;
+    -moz-animation: c 2s ease-out;
+    -webkit-animation: c 2s ease-out;
     background-color: #66b3cc;
     background-image: -webkit-gradient(linear, left top, left bottom, from(#66b3cc), to(#5da3ba));
     background-image: -webkit-linear-gradient(top, #66b3cc, #5da3ba);
@@ -429,6 +444,15 @@ body {
     }
 }
 
+@-moz-keyframes c {
+    0% {
+        width: 0;
+    }
+    100% {
+        width: 65%;
+    }
+}
+
 @-moz-keyframes javascript {
     0% {
         width: 0;
@@ -474,6 +498,15 @@ body {
 }
 
 @-webkit-keyframes cplus {
+    0% {
+        width: 0;
+    }
+    100% {
+        width: 65%;
+    }
+}
+
+@-webkit-keyframes c {
     0% {
         width: 0;
     }
